<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/home" />
    <item android:title="Capture"
        android:icon="@drawable/baseline_camera_alt_24"
        android:id="@+id/capture"/>
    <item android:title="Collections"
        android:icon="@drawable/baseline_collections_24"
        android:id="@+id/collections"/>
</menu>